force-app/main/default/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Free</fullName>
                    <default>true</default>
                    <label>Free</label>
                </value>
                <value>
                    <fullName>&lt; 1 USD</fullName>
                </value>
                <value>
                    <fullName>&lt; 5 USD</fullName>
                </value>
                <value>
                    <fullName>&lt; 10 USD</fullName>
                </value>
                <value>
                    <fullName>Over 10 USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Section__c</fullName>
        <label>School Section</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subjects_Applicable__c</fullName>
        <label>Subjects Applicable</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reading</fullName>
                </value>
                <value>
                    <fullName>Writing</fullName>
                </value>
                <value>
                    <fullName>Speaking and Listening</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Maths</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Design and Technology</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Geography</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>ICT</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Physics</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Business Studies</fullName>
                </value>
                <value>
                    <fullName>Just Fun</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Ipad_App</fullName>
        <active>true</active>
        <label>Ipad App</label>
    </recordTypes>
</CustomObject>